api/test/kompose/apisix-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: apisix
  name: apisix
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: apisix
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/apisix-dashboard-e2e: "true"
        io.kompose.service: apisix
    spec:
      containers:
        - image: apache/apisix:2.6-alpine
          name: apisix
          ports:
            - containerPort: 9080
            - containerPort: 9090
            - containerPort: 9091
            - containerPort: 9443
          resources: {}
          volumeMounts:
            - mountPath: /usr/local/apisix/conf/config.yaml
              name: apisix-hostpath0-configmap
              subPath: config.yaml
              readOnly: true
            - mountPath: /usr/local/apisix/certs/apisix.crt
              name: apisix-hostpath1-configmap
              subPath: apisix.crt
              readOnly: true
            - mountPath: /usr/local/apisix/certs/apisix.key
              name: apisix-hostpath2-configmap
              subPath: apisix.key
              readOnly: true
            - mountPath: /usr/local/apisix/logs
              name: apisix-hostpath3-configmap
      hostname: apisix-server1
      restartPolicy: Always
      volumes:
        - configMap:
            name: apisix-hostpath0
          name: apisix-hostpath0-configmap
        - configMap:
            name: apisix-hostpath1
          name: apisix-hostpath1-configmap
        - configMap:
            name: apisix-hostpath2
          name: apisix-hostpath2-configmap
        - configMap:
            name: apisix-hostpath3
          name: apisix-hostpath3-configmap
status: {}
