api/test/kompose/apisix2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes configMap --build local --push-image=false --out ../kompose
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: apisix2
  name: apisix2
spec:
  ports:
    - name: "9081"
      port: 9081
      targetPort: 9080
  selector:
    io.kompose.service: apisix2
status:
  loadBalancer: {}
