api/test/kompose/apisix_dashboard_e2e-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: apisix-dashboard-e2e
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/apisix-dashboard-e2e: "true"
  podSelector:
    matchLabels:
      io.kompose.network/apisix-dashboard-e2e: "true"
