api/test/kompose/managerapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: managerapi
  name: managerapi
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: managerapi
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/apisix-dashboard-e2e: "true"
        io.kompose.service: managerapi
    spec:
      containers:
        - image: managerapi
          name: managerapi
          ports:
            - containerPort: 9000
          resources: {}
          volumeMounts:
            - mountPath: /go/manager-api/conf/conf.yaml
              subPath: conf.yaml
              name: managerapi-hostpath0-configmap
              readOnly: true
            - mountPath: /go/manager-api/testdata
              name: managerapi-hostpath1-configmap
      restartPolicy: Always
      volumes:
        - configMap:
            name: managerapi-hostpath0
          name: managerapi-hostpath0-configmap
        - configMap:
            name: managerapi-hostpath1
          name: managerapi-hostpath1-configmap
status: {}
