api/test/kompose/node3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes hostPath
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: node3
  name: node3
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: node3
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert --volumes hostPath
        kompose.version: 1.22.0 (955b78124)
      creationTimestamp: null
      labels:
        io.kompose.network/apisix-dashboard-e2e: "true"
        io.kompose.service: node3
    spec:
      containers:
        - args:
            - /usr/local/bin/etcd
            - --data-dir=/etcd-data
            - --name
            - node3
            - --initial-advertise-peer-urls
            - http://172.16.238.12:2380
            - --listen-peer-urls
            - http://0.0.0.0:2380
            - --advertise-client-urls
            - http://172.16.238.12:2379
            - --listen-client-urls
            - http://0.0.0.0:2379
            - --initial-cluster
            - node1=http://172.16.238.10:2380,node2=http://172.16.238.11:2380,node3=http://172.16.238.12:2380
            - --initial-cluster-state
            - new
            - --initial-cluster-token
            - docker-etcd
          env:
            - name: ETCDCTL_API
              value: "3"
          image: gcr.io/etcd-development/etcd:v3.4.0
          name: node3
          ports:
            - containerPort: 2379
            - containerPort: 2380
          resources: {}
      restartPolicy: Always
status: {}
