api/test/kompose/upstream-service.yaml
#
# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# If you want to set the specified configuration value, you can set the new
# in this file. For example if you want to specify the etcd address:
#
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert --volumes configMap --build local --push-image=false --out ../kompose
    kompose.version: 1.22.0 (955b78124)
  creationTimestamp: null
  labels:
    io.kompose.service: upstream
  name: upstream
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 80
    - name: "1980"
      port: 1980
      targetPort: 1980
    - name: "1981"
      port: 1981
      targetPort: 1981
    - name: "1982"
      port: 1982
      targetPort: 1982
    - name: "1983"
      port: 1983
      targetPort: 1983
    - name: "1984"
      port: 1984
      targetPort: 1984
  selector:
    io.kompose.service: upstream
status:
  loadBalancer: {}
